

[metadata]
name = Rate Limit
version = attr: rate_limit.__version__
url = https://github.com/DonalChilde/rate_limit
description = foo
long_description = file: README.rst, HISTORY.rst
keywords = Python rate_limit
license = MIT license
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
tests_require = pytest
# setup_requires = pytest-runner

[options.entry_points]
console_scripts =
    rate_limit = rate_limit.cli.main_cli:main

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.packages.find]
where=src

# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

# [options.data_files]
# /etc/my_package =
#     site.d/00_default.conf
#     host.d/00_default.conf
# data = data/img/logo.png, data/svg/icon.svg

# [bumpversion]
# current_version = 0.1.0
# commit = True
# tag = True

# [bumpversion:file:setup.py]
# search = version='{current_version}'
# replace = version='{new_version}'

# [bumpversion:file:rate_limit/__init__.py]
# search = __version__ = '{current_version}'
# replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
addopts = --verbose
testpaths = tests
